--- a/privacy.html
+++ b/privacy.html
@@ -71,7 +71,7 @@
   <p>We may update this policy. We will post any changes to this page and update the effective date.</p>
 
   <h2>Contact</h2>
-  <p>If you have questions about this policy or the extension, contact: <a href="mailto:[YOUR‑EMAIL]">[YOUR‑EMAIL]</a></p>
+  <p>If you have questions about this policy or the extension, contact: <a href="mailto:soekhaingwin@gmail.com">soekhaingwin@gmail.com</a></p>
 </body>
 </html>
 
