--- a/privacy-nymart.html
+++ b/privacy-nymart.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+a<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -244,7 +244,7 @@
         If you have any questions or concerns about this Privacy Policy or our data practices, please contact us at:
       </p>
       <p>
-        <strong>Email:</strong> <a href="mailto:soekhaingwin@gmail.com">your-email@example.com</a><br />
+        <strong>Email:</strong> <a href="mailto:soekhaingwin@gmail.com">soekhaingwin@gmail.com</a><br />
         <!-- Optional:
         <strong>Address:</strong> Your Company Address Here
         -->
