--- a/team-mate-pp.html
+++ b/team-mate-pp.html
@@ -169,7 +169,7 @@ For privacy-related questions or requests, please contact:
 </p>
 
 <p>
-<strong>Email:</strong> support@yourdomain.com <br>
+<strong>Email:</strong> soekhaingwin@gmail.com <br>
 <strong>Company:</strong> Team Mate HR Platform
 </p>
 
