--- a/team-mate-pp.html
+++ b/team-mate-pp.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Privacy Policy | Team Mate HR</title>
+<title>Privacy Policy | Team Mate by Nayar</title>
 
 <style>
 body {
@@ -51,11 +51,11 @@ footer {
 
 <body>
 
-<h1>Privacy Policy – Team Mate HR Platform</h1>
+<h1>Privacy Policy – Team Mate by Nayar</h1>
 <p><strong>Last Updated:</strong> February 20, 2026</p>
 
 <p>
-Team Mate HR is a workplace management platform designed for employee attendance, payroll, and HR operations. 
+Team Mate by Nayar is a workplace management platform designed for employee attendance, payroll, and HR operations. 
 We are committed to protecting employee and organizational data with transparency, security, and compliance.
 </p>
 
@@ -155,7 +155,7 @@ and compliance requirements.
 
 <h2>9. Children's Privacy</h2>
 <p>
-Team Mate HR is designed for workplace use and is not intended for individuals under 18 years old.
+Team Mate by Nayar is designed for workplace use and is not intended for individuals under 18 years old.
 </p>
 
 <h2>10. Changes to This Policy</h2>
@@ -170,11 +170,11 @@ For privacy-related questions or requests, please contact:
 
 <p>
 <strong>Email:</strong> soekhaingwin@gmail.com <br>
-<strong>Company:</strong> Team Mate HR Platform
+<strong>Company:</strong> Team Mate by Nayar 
 </p>
 
 <footer>
-© 2026 Team Mate HR. All rights reserved.
+© 2026 Team Mate by Nayar All rights reserved.
 </footer>
 
 </body>
